--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
+    "history": "^4.6.1",
     "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.9",
     "react-dom": "^15.5.4",
+    "react-router-dom": "^4.1.1",
     "react-widgets": "^3.4.6"
   },
   "devDependencies": {
