--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
+    "font-awesome": "^4.7.0",
     "history": "^4.6.1",
     "moment": "^2.18.1",
     "react": "^15.5.4",
