--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "history": "^4.6.1",
     "moment": "^2.18.1",
     "react": "^15.5.4",
-    "react-bootstrap": "^0.30.9",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1",
-    "react-widgets": "^3.4.6"
+    "react-tooltip": "^3.3.0",
+    "react-widgets": "^3.4.6",
+    "yup": "^0.21.3"
   },
   "devDependencies": {
     "react-scripts": "0.9.5"
